# app-migrator-copilot

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
specs/001-yaml-scanner/: analysis.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-yaml-scanner/checklists/: requirements.md
specs/001-yaml-scanner/contracts/: cli-interface.md
src/: __init__.py
src/scanner/: __init__.py  cli.py  core.py  filters.py
tests/integration/: test_permission_errors.py  test_recursive_scan.py  test_single_directory_scan.py
tests/unit/: test_filters.py  test_scanner_core.py
